# plasma-nm

./: .gitignore  CMakeLists.txt  README  README.md
debian/: changelog  control  copyright  kde-config-mobile-networking.install  plasma-nm.install  plasma-nm.lintian-overrides  rules
debian/meta/: cmake-ignore
debian/upstream/: metadata
kcm/: kcm.cpp
kded/: CMakeLists.txt  bluetoothmonitor.cpp  bluetoothmonitor.h  cellularmonitor.cpp  cellularmonitor.h  monitor.cpp  monitor.h  networkmanagement.desktop  networkmanagement.notifyrc  networkservice.cpp  networkservice.h  notification.cpp  secretagent.cpp  secretagent.h  service.cpp  service.h
kded/qml/: main.qml
libs/: CMakeLists.txt  configuration.cpp  configuration.h  handler.cpp  handler.h
libs/declarative/: CMakeLists.txt  connectionicon.cpp  networkstatus.cpp  qmlplugins.cpp
libs/editor/: connectioneditorbase.cpp
libs/models/: appletproxymodel.cpp  editorproxymodel.cpp  editorproxymodel.h  gsmproxymodel.cpp  gsmproxymodel.h  kcmidentitymodel.cpp  kcmidentitymodel.h  mobileproxymodel.cpp  networkmodel.cpp  networkmodel.h  networkmodelitem.cpp  networkmodelitem.h  vpnproxymodel.cpp  vpnproxymodel.h
mobile/: CMakeLists.txt
mobile/cellular/: CMakeLists.txt  Messages.sh  cellularsettings.cpp  cellularsettings.h  resources.qrc
mobile/cellular/package/: metadata.desktop
mobile/cellular/package/contents/ui/: DataModePop.qml  DataOptions.qml  DataPop.qml  Home.qml  Hotspot.qml  SelectionPop.qml  main.qml
mobile/hotspot/: CMakeLists.txt  hotspotsettings.cpp  hotspotsettings.h
mobile/vpn/: CMakeLists.txt  Messages.sh  resources.qrc  vpn.cpp  vpn.desktop  vpn.h
mobile/vpn/package/: metadata.desktop
mobile/vpn/package/contents/ui/: AddConfig.qml  CTextField.qml  EditConfig.qml  Home.qml  TypeList.qml  VPNDetails.qml  main.qml
mobile/wifi/: CMakeLists.txt  Messages.sh  resources.qrc  wifisettings.cpp  wifisettings.desktop  wifisettings.h
mobile/wifi/package/: metadata.desktop
mobile/wifi/package/contents/ui/: ConnectedItem.qml  DNS.qml  Home.qml  IPV4.qml  InputItem.qml  JDialog.qml  JInputDialog.qml  NormalInputItem.qml  OtherNetwork.qml  Password.qml  SecurityListView.qml  SelectItem.qml  SwitchItem.qml  WifiItem.qml  WifiLoadingItem.qml  main.qml
po/ar/: plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openvpnui.po  plasmanetworkmanagement_vpncui.po
po/ast/: plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kcm.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_openvpnui.po
po/az/: kcm_mobile_broadband.po  kcm_mobile_hotspot.po  kcm_mobile_wifi.po  plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kcm.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_fortisslvpnui.po  plasmanetworkmanagement_iodineui.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openswanui.po  plasmanetworkmanagement_openvpnui.po  plasmanetworkmanagement_pptpui.po  plasmanetworkmanagement_sshui.po  plasmanetworkmanagement_sstpui.po  plasmanetworkmanagement_strongswanui.po  plasmanetworkmanagement_vpncui.po
po/bg/: plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-libs.po
po/bs/: plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openswanui.po  plasmanetworkmanagement_openvpnui.po  plasmanetworkmanagement_pptpui.po  plasmanetworkmanagement_strongswanui.po  plasmanetworkmanagement_vpncui.po
po/ca/: kcm_mobile_broadband.po  kcm_mobile_hotspot.po  kcm_mobile_wifi.po  plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kcm.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_fortisslvpnui.po  plasmanetworkmanagement_iodineui.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openswanui.po  plasmanetworkmanagement_openvpnui.po  plasmanetworkmanagement_pptpui.po  plasmanetworkmanagement_sshui.po  plasmanetworkmanagement_sstpui.po  plasmanetworkmanagement_strongswanui.po  plasmanetworkmanagement_vpncui.po
po/ca@valencia/: kcm_mobile_broadband.po  kcm_mobile_hotspot.po  kcm_mobile_wifi.po  plasma_applet_org.kde.plasma.networkmanagement.po  plasmanetworkmanagement-kcm.po  plasmanetworkmanagement-kded.po  plasmanetworkmanagement-libs.po  plasmanetworkmanagement_fortisslvpnui.po  plasmanetworkmanagement_iodineui.po  plasmanetworkmanagement_l2tpui.po  plasmanetworkmanagement_openconnectui.po  plasmanetworkmanagement_openswanui.po  plasmanetworkmanagement_openvpnui.po  (+5 more)
po/cs/: kcm_mobile_hotspot.po  (+17 more)
(+713 files in other folders)
